# process

./: .cliffignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  flake.nix  sans-io.excalidraw  shell.nix
.github/workflows/: release-on-demand.yml  releases.yml
examples/: std-exit-status.rs  std-output-stderr.rs  std-output-stdout.rs  std-pipeline.rs  tokio-exit-status.rs  tokio-output.rs  tokio-pipeline.rs
lib/: CHANGELOG.md  Cargo.toml
lib/src/: command.rs  lib.rs
lib/src/flow/: mod.rs  spawn-then-wait.rs
process-lib/: Cargo.toml  README.md
process-lib/src/: command.rs  io.rs  lib.rs  serde.rs  state.rs
process-lib/src/flow/: mod.rs  spawn-then-wait-with-output.rs  spawn-then-wait.rs
process-std/: Cargo.toml  README.md
process-std/examples/: status.rs  stderr.rs  stdin.rs
process-std/src/: lib.rs
process-tokio/: Cargo.toml  README.md
process-tokio/examples/: stdin.rs  stdout.rs
process-tokio/src/: lib.rs
src/: command.rs  io.rs  lib.rs  output.rs  serde.rs  state.rs
src/coroutines/: mod.rs  spawn-then-wait-with-output.rs  spawn-then-wait.rs
src/flows/: spawn-then-wait-with-output.rs  spawn-then-wait.rs
src/handlers/: std.rs  tokio.rs
src/runtimes/: mod.rs  std.rs  tokio.rs
std/: README.md
std/examples/: stdout-piped.rs  stdout.rs
tokio/: README.md
tokio/examples/: status.rs  stderr.rs  stdout-piped.rs
