[package]
name = "process-flows"
description = "I/O-free library to manage processes"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["api-bindings"]
keywords = ["io-free", "flow", "process", "command", "thread"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/process-flows/latest/process_flows"
repository = "https://github.com/pimalaya/process"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = []
std = []
tokio = ["dep:tokio"]
serde = ["dep:serde"]

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[dependencies]
log = "0.4"
serde = { version = "1", optional = true }
tokio = { version = "1", default-features = false, features = ["process"], optional = true }
