[package]
name = "process-lib"
description = "I/O-free library to manage processes"
version = "2.0.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["api-bindings"]
keywords = ["process", "command", "spawn", "io-free", "sans-io"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/process-lib/latest/process_lib"
repository = "https://github.com/pimalaya/process"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--document-private-items"]

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
serde = { version = "1", optional = true }
tracing = "0.1"
