[package]
name = "process-lib"
description = "Sans I/O library to manage processes"
version = "2.0.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = ["command", "spawn", "process", "pipeline", "sans-io"]
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/process-lib/latest/process_lib/"
repository = "https://github.com/pimalaya/process/"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", optional = true }
memchr = { version = "2.7.4", optional = true }
quick-xml = { version = "0.37", features = ["serialize"], optional = true }
secrecy = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "2", optional = true }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
vparser = "1"
