[package]
name = "process-lib"
description = "Sans I/O library to manage processes"
version = "2.0.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = ["process", "command", "spawn", "pipeline", "sans-io"]
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/process-lib/latest/process_lib/"
repository = "https://github.com/pimalaya/process/"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
tracing = "0.1"
