[package]
name = "process-std"
description = "Standard, blocking I/O connector for process-lib"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = []
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/process-lib/latest/process_lib/"
repository = "https://github.com/pimalaya/process/"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
	     
[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dependencies]
process-lib = "2"
tracing = "0.1"
