[package]
name = "process-tokio"
description = "Tokio-based, async I/O connector for process-lib"
version = "1.0.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["api-bindings", "asynchronous"]
keywords = ["process", "command", "spawn", "tokio", "async"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/process-tokio/latest/process_tokio"
repository = "https://github.com/pimalaya/process"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
	     
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dependencies]
process-lib = "2"
tokio = { version = "1", default-features = false, features = ["process"] }
tracing = "0.1"
